fix for spacing on farms page, upgraded nextjs and react libs, fixed menu breakpoints

--- a/components/Balance/Balance.module.css
+++ b/components/Balance/Balance.module.css
@@ -24,7 +24,7 @@
 }
 
 .value {
-  font-size: 250%;
+  font-size: 225%;
 }
 
 .apy {
