--- a/layout/Layout.module.css
+++ b/layout/Layout.module.css
@@ -135,7 +135,7 @@
   color: var(--color-hightlight);
 }
 
-@media all and (max-width: 992px) {
+@media all and (max-width: 1100px) {
   .logo {
     height: 20px;
   }
@@ -143,9 +143,15 @@
     cursor: pointer;
     margin-right: var(--padding-narrow);
   }
+
+  /* .menu {
+    font-size: var(--font-size-small); 
+  } */
 }
 
-@media all and (max-width: 767px) {
+
+
+@media all and (max-width: 850px) {
   .logo {
     height: 16px;
   }
